<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:id="@+id/activity_main_navigation"
    android:background="#FFFFF0">

    <!--线性布局放置在最下面。
        1、3个菜单用weight划分权重1.
        2、每个RelativeLayout里设置ImageView + TextView。
        3、R设置为垂直布局以及垂直发布。
        4、I与T设置为水平居中，两个控件距离2dp。
    -->

    <TextView
        android:id="@+id/navigation_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_home"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_action_home"
        android:background="@drawable/tab_menu_drawable_change"
        android:textColor="@color/dark"/>

    <TextView
        android:id="@+id/navigation_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/app_topic"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_action_topic"
        android:background="@drawable/tab_menu_drawable_change"
        android:textColor="@color/dark"/>

    <TextView
        android:id="@+id/navigation_mine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/app_mine"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_action_mine"
        android:background="@drawable/tab_menu_drawable_change"
        android:textColor="@color/dark"/>


</LinearLayout>