<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mine_item1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/mine_item1_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/picture_6"
            android:scaleType="centerCrop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/mine_item1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/mine_item1_image"
            android:layout_toRightOf="@+id/mine_item1_image"
            android:text="DARK伯爵"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_rightbutton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_item2"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mine_item2_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_publish"/>

        <TextView
            android:id="@+id/mine_item2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/mine_item2_image"
            android:layout_toRightOf="@+id/mine_item2_image"
            android:text="@string/mine_publish"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/ic_action_rightbutton" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_item3"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mine_item3_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_collection"/>

        <TextView
            android:id="@+id/mine_item3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/mine_item3_image"
            android:layout_toRightOf="@+id/mine_item3_image"
            android:text="@string/mine_collection"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/ic_action_rightbutton" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_item4"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mine_item4_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_focus"/>

        <TextView
            android:id="@+id/mine_item4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/mine_item4_image"
            android:layout_toRightOf="@+id/mine_item4_image"
            android:text="@string/mine_focus"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/ic_action_rightbutton" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_item5"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mine_item5_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_softsetting"/>

        <TextView
            android:id="@+id/mine_item5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/mine_item5_image"
            android:layout_toRightOf="@+id/mine_item5_image"
            android:text="@string/mine_setting"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/ic_action_rightbutton" />
    </RelativeLayout>
</LinearLayout>